<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#292D36" >
    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/menu_refresh" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_color" />
    
    <Button
        android:id="@+id/btnSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/menu_settings" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_color" />
    
    <Button
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/menu_about" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_color" />
    
    <Button
        android:id="@+id/btnQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/menu_quit" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_color" />
</LinearLayout>
